# poolite

./: .travis.yml  Cargo.toml  readme.md  readme.tpl
examples/: arc_mutex.rs  builder.rs  channel.rs  into.rs  scope.rs  without.rs
src/: inner.rs  lib.rs  main.rs  scope.rs
tests/: fibs.rs  poolite_test_fibs.rs  poolite_test_fibs.rs.bk
