[package]
name = "poolite"
version = "0.6.2"
authors = ["biluohc <biluohc@qq.com>"]
description = "A lite threadpool library."
repository = "https://github.com/biluohc/poolite"
documentation = "https://docs.rs/poolite/"
readme = "readme.md"
keywords = ["thread","pool","threadpool","thread_pool","thread-pool"]
license = "MIT"

[dependencies]
num_cpus = "^1.2.1"

stderr = "0.7.1"
# stderr = { git = "https://github.com/biluohc/stderr", branch = "master", version = "0.7.1"}
# stderr= { path = "../stderr" }

[[test]]
name ="poolite_test_fibs"
path="tests/poolite_test_fibs.rs"

